--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -8,6 +8,15 @@ services:
   basketdb:
     image: redis:alpine
 
+  discountdb:
+    image: postgres
+
+  pgadmin:
+    image: dpage/pgadmin4
+
+  portainer:
+    image: portainer/portainer-ce
+
 
 
   catalog.api:
@@ -26,6 +35,9 @@ services:
 
 volumes:
   mongo_data:
+  portainer_data:
+  postgres_data:
+  pgadmin_data:
  
 
 
