Containerize Discount.API

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -33,11 +33,18 @@ services:
 
 
 
+  discount.api:
+    image: ${DOCKER_REGISTRY-}discountapi
+    build:
+      context: .
+      dockerfile: Services/Discount/Discount.API/Dockerfile
+
 volumes:
   mongo_data:
   portainer_data:
   postgres_data:
   pgadmin_data:
  
+
 
 
