--- a/src/Services/Catalog/Catalog.API/appsettings.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.json
@@ -4,6 +4,7 @@
     "DatabaseName": "ProductDb",
     "CollectionName": "Products"
   },
+  "IdentityServerURL": "http://localhost:6001",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
